[#1512] Fix columns titles in users/groups listing
The permissions names were truncated.
Replace the character '_' in the title by a space,
and display it on multiple lines.

--- a/prewikka/htdocs/css/style.less
+++ b/prewikka/htdocs/css/style.less
@@ -889,3 +889,11 @@ body .tooltip {
     color: #000;
     background-color: #fff;
 }
+
+/*
+ * Users and Groups listing grids
+ */
+
+#gbox_user_list_table.ui-jqgrid .ui-jqgrid-htable .ui-jqgrid-labels th div {
+    white-space: normal;
+}
